{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "simple_player_movement",
            "id": "d0ba44ad-bb56-45ba-9dd4-74129f771f45",
            "actions": [
                {
                    "name": "horizontal_movement",
                    "type": "Value",
                    "id": "5b99cfc7-ed50-4843-9197-b0f4b4e8af81",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "rotation",
                    "type": "Value",
                    "id": "e530c8e6-ee67-4cd3-af17-5294612b5ed2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66449eda-ac3b-492d-996c-b6145ad6e5ae",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad-scheme",
                    "action": "horizontal_movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b954ad4-5d6c-460c-8ce2-a5231baae745",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad-scheme",
                    "action": "rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "gamepad-scheme",
            "bindingGroup": "gamepad-scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}